--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.1.4",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack": "^5.85.1",
