--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "react": "webpack --mode development --watch",
+    "client": "webpack --mode development --watch",
     "server": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
