--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.4",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
     "dotenv": "^16.1.4",
